# imxInsightsApps

./: .gitignore  CONTRIBUTING.md  README.md  build-gui-app.py  pyproject.toml  run_api.py  settings.json
.github/workflows/: auto-release.yml  build.yml  cleanup-old-runs.yml  pre-release.yml  test.yml
imxInsightsApps/: __init__.py  build_helpers.py
imxInsightsApps/api/: main.py
imxInsightsApps/gui/: main.py  settings.py
imxInsightsApps/gui/logic/: api_client.py  app_version_check.py  cleanup.py  file_handlers.py  state_manager.py
imxInsightsApps/gui/ui/: components.py  helpers.py  main_page.py
imxInsightsApps/gui/ui/tabs/: diff.py  population.py
imxInsightsApps/shared/: diff_and_population.py  helpers.py
sample_data/: imx_124_single_file.xml
tests/: conftest.py  helpers.py
tests/fixtures/: files_and_paths.py
