[build-system]
requires = ["hatchling", "hatch-regex-commit", "isort"]
build-backend = "hatchling.build"

[project]
name = "imxInsightsApps"
description = "python imx apps"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [
    { name = "Hzd", email = "Hazedd@users.noreply.github.com" },
    { name = "KerkhofJ", email = "KerkhofJ@users.noreply.github.com" },
    { name = "Open-Imx", email = "open-imx@organisation.noreply.github.com" },
]
dependencies = [
    "imxInsights",
    "openpyxl",
    "fastapi",
    "nicegui",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Documentation = "https://open-imx.github.io/imxInsightsApps/"
Source = "https://github.com/open-imx/imxInsightsApps"

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_message = "🚀 Version {new_version}"
path = "imxInsightsApps/__init__.py"
tag_sign = false

[tool.hatch.envs.default]
python = "3.10"
dependencies = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "python-dotenv",
    "pyinstaller",
    "zizmor",
    "isort",
]

[tool.hatch.envs.default.scripts]
test = "pytest --runslow && pytest -m slow"
test-fast = "pytest"
lint = [
    "isort imxInsightsApps/ tests/",
    "ruff format imxInsightsApps/ tests/",
    "ruff format --check imxInsightsApps/ tests/",
    "mypy imxInsightsApps/ --check-untyped-defs",
]
lint-check = [
    "ruff format --check imxInsightsApps/ tests/",
    "ruff check imxInsightsApps/ apps/ ",
    "mypy imxInsightsApps/ --check-untyped-defs",
    "zizmor .github/workflows/ ",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.hatch.build]
packages = ["imxInsightsApps"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP"]
ignore = ["TRY003"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
# addopts = "--cov=imxTools --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
